--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "team-profile-generator",
   "version": "1.0.0",
-  "description": "Bootcamp homewor",
+  "description": "Bootcamp homework",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
